--- a/ui/storefront/Areas/Basket/Views/Shared/Components/CheckOut/Default.cshtml
+++ b/ui/storefront/Areas/Basket/Views/Shared/Components/CheckOut/Default.cshtml
@@ -128,7 +128,7 @@
         Checkout
     </button>
     <smart-paste-button class="w-full text-center bg-stone-600 rounded-xl py-3 px-6 font-semibold text-lg text-white transition-all duration-500 hover:bg-stone-700">
-        <img loading="lazy" src="~/imgs/payment/smart-paste.svg" class="h-6 inline-block mr-2 htmx-indicator" alt="Paste" asp-append-version="true" />
+        <img loading="lazy" src="~/imgs/payment/smart-paste.svg" class="h-6 inline-block mr-2" alt="Paste" asp-append-version="true" />
         Smart Paste
     </smart-paste-button>
 </form>
