refactor: improve feedback page

--- a/ui/storefront/Areas/Product/Views/Shared/Components/Feedback/Default.cshtml
+++ b/ui/storefront/Areas/Product/Views/Shared/Components/Feedback/Default.cshtml
@@ -2,13 +2,29 @@
 
 @{
     const string userRole = "Customer who bought the product and want to leave a review";
+    string[] userPhrases =
+    [
+        "I bought this product and I want to leave a review",
+        "I want to leave a review for this product",
+        "I want to share my experience with this product",
+        "I want to leave a review for this product",
+        "I want to share my experience with this product",
+        "Thank you for the product, I want to leave a review"
+    ];
 }
 
 <div class="p-2 rounded-3xl">
-    <form asp-area="Product" asp-controller="Product" asp-action="AddFeedback" class="max-w-md mx-auto mt-16 p-4 bg-white shadow rounded">
+    <form x-data="{ anonymous: false }"
+          hx-post
+          hx-area="Product"
+          hx-controller="Product"
+          hx-action="AddFeedback"
+          hx-target="#product-list-container"
+          hx-swap="outerHTML"
+          class="max-w-md mx-auto mt-16 p-4 bg-white shadow rounded">
         <h2 class="text-2xl font-bold mb-4">Your review</h2>
         <input type="hidden" asp-for="ProductId" value="@Model.ProductId"/>
-        <input type="hidden" asp-for="AccountId" value="@Model.AccountId"/>
+        <input type="hidden" asp-for="CustomerId" :value="anonymous ? '' : '@Model.CustomerId'" />
         <div class="mb-4">
             <label class="block mb-1">Rating</label>
             <div class="flex justify-center">
@@ -24,14 +40,21 @@
         </div>
         <div class="mb-4">
             <label asp-for="Content" class="block mb-1">Message</label>
-            <smart-textarea 
+            <smart-textarea
                 id="Content"
                 name="Content"
                 user-role="@userRole"
-                rows="3" 
+                user-phrases="@userPhrases"
+                rows="3"
                 placeholder="Your review helps other customers to make a decision"
                 class="block w-full rounded-md border-0 py-3 px-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary-300 sm:text-sm sm:leading-6 resize-none"/>
             <span asp-validation-for="Content" class="text-red-900"></span>
+        </div>
+        <div class="flex items-center py-4">
+            <input id="anonymous-feedback" type="checkbox" x-model="anonymous" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 focus:ring-2">
+            <label for="anonymous-feedback" class="w-full py-4 ms-2 text-sm font-medium text-gray-900">
+                Feedback as an <strong>anonymous</strong> user
+            </label>
         </div>
         <button type="submit" class="text-white mt-4 sm:mt-0 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center justify-center">
             Submit
