refactor: change logic payment

--- a/ui/storefront/Areas/Basket/Views/Shared/Components/CheckOut/Default.cshtml
+++ b/ui/storefront/Areas/Basket/Views/Shared/Components/CheckOut/Default.cshtml
@@ -1,9 +1,8 @@
-﻿@using System.Globalization
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using RookieShop.Storefront.Areas.Basket.Models
-@model RookieShop.Storefront.Areas.Order.Models.OrderRequest
+@model RookieShop.Storefront.Areas.Order.Models.OrderFromRequest
 
-<form x-data="{ paymentMethod: 'Cash' }" asp-area="Order" asp-controller="Order" asp-action="CheckOut">
+<form asp-area="Order" asp-controller="Order" asp-action="CheckOut">
     <label asp-for="Street" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
     <div class="flex pb-4 w-full">
         <div class="relative w-full">
@@ -21,7 +20,7 @@
                    asp-for="City"
                    data-smartpaste-description="The city or district where you live, exclude Ho Chi Minh City, Ha Noi, Da Nang, Can Tho, Hai Phong because they are provinces"
                    class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400 "
-                   placeholder="Tan Binh" 
+                   placeholder="Tan Binh"
                    required/>
         </div>
     </div>
@@ -36,90 +35,24 @@
                    required/>
         </div>
     </div>
-    <label asp-for="PaymentMethod" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
-        Payment Method
-    </label>
-    <div class="mb-3 flex -mx-2">
-        <div class="px-2">
-            <label asp-for="PaymentMethod" class="flex items-center cursor-pointer">
-                <input x-model="paymentMethod" 
-                       type="radio" 
-                       data-smartpaste-description="True if the card holder name, card number, ccv is empty"
-                       class="form-radio h-5 w-5 text-indigo-500" 
-                       id="type1" 
-                       value="@PaymentMethod.Cash" 
-                       checked/>
-                <img loading="lazy" src="~/imgs/payment/dollar.png" class="h-8 ml-3" alt="Cash" asp-append-version="true"/>
-            </label>
+    <label asp-for="PaymentMethod" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
+    <div class="mb-3 flex">
+        <div class="flex items-center">
+            <input type="radio"
+                   asp-for="PaymentMethod"
+                   data-smartpaste-description="True if the card holder name, card number, ccv is empty"
+                   class="form-radio h-5 w-5 text-indigo-500"
+                   value="@PaymentMethod.Cash"
+                   checked/>
+            <img loading="lazy" src="~/imgs/payment/dollar.png" class="h-8 ml-3" alt="Cash" asp-append-version="true"/>
         </div>
-        <div class="px-2">
-            <label asp-for="PaymentMethod" class="flex items-center cursor-pointer">
-                <input x-model="paymentMethod" 
-                       type="radio" 
-                       data-smartpaste-description="True if the card holder name, card number, ccv is not empty"
-                       class="form-radio h-5 w-5 text-indigo-500" 
-                       id="type2" 
-                       value="@PaymentMethod.Card"/>
-                <img loading="lazy" src="~/imgs/payment/stripe.png" class="h-8 ml-3" alt="Stripe" asp-append-version="true"/>
-            </label>
-        </div>
-    </div>
-    <div id="card-info-section" x-show="paymentMethod === 'Card'" x-cloak>
-        <label asp-for="CardHolderName" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
-        <div class="flex pb-4 w-full">
-            <div class="relative w-full">
-                <input type="text"
-                       asp-for="CardHolderName"
-                       class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400 "
-                       placeholder="John Smith"/>
-            </div>
-        </div>
-        <label asp-for="CardNumber" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
-        <div class="flex pb-4 w-full">
-            <div class="relative w-full">
-                <input type="text"
-                       asp-for="CardNumber"
-                       class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400 "
-                       placeholder="0000 0000 0000"/>
-            </div>
-        </div>
-        <label asp-for="ExpiryMonth" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
-            Expiration Date
-        </label>
-        <div class="mb-3 flex -mx-2">
-            <div class="px-2 w-full">
-                <div class="relative w-full">
-                    <select asp-for="ExpiryMonth" class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400">
-                        <option value="@null" selected>MM</option>
-                        @for (var month = 1; month <= 12; month++)
-                        {
-                            var cultureMonth = month;
-                            <option value="@month.ToString("D2")">@cultureMonth.ToString("D2") - @CultureInfo.CurrentCulture.DateTimeFormat.GetAbbreviatedMonthName(cultureMonth)</option>
-                        }
-                    </select>
-                </div>
-            </div>
-            <div class="px-2 w-full">
-                <div class="relative w-full">
-                    <select asp-for="ExpiryYear" class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400">
-                        <option value="@null" selected>YY</option>
-                        @for (var value = DateTime.Now.Year; value < DateTime.Now.Year + 10; value++)
-                        {
-                            var year = value;
-                            <option value="@value">@year</option>
-                        }
-                    </select>
-                </div>
-            </div>
-        </div>
-        <label asp-for="Cvc" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
-        <div class="flex pb-4 w-full">
-            <div class="relative w-full">
-                <input type="text"
-                       asp-for="Cvc"
-                       class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400 "
-                       placeholder="xxx"/>
-            </div>
+        <div class="flex items-center ml-2">
+            <input type="radio"
+                   asp-for="PaymentMethod"
+                   data-smartpaste-description="True if the card holder name, card number, ccv is not empty"
+                   class="form-radio h-5 w-5 text-indigo-500"
+                   value="@PaymentMethod.Card"/>
+            <img loading="lazy" src="~/imgs/payment/stripe.png" class="h-8 ml-3" alt="Stripe" asp-append-version="true"/>
         </div>
     </div>
     <hr/>
@@ -128,7 +61,7 @@
         Checkout
     </button>
     <smart-paste-button class="w-full text-center bg-stone-600 rounded-xl py-3 px-6 font-semibold text-lg text-white transition-all duration-500 hover:bg-stone-700">
-        <img loading="lazy" src="~/imgs/payment/smart-paste.svg" class="h-6 inline-block mr-2" alt="Paste" asp-append-version="true" />
+        <img loading="lazy" src="~/imgs/payment/smart-paste.svg" class="h-6 inline-block mr-2" alt="Paste" asp-append-version="true"/>
         Smart Paste
     </smart-paste-button>
 </form>
