--- a/ui/storefront/Areas/Order/Views/Order/ConfirmOrder.cshtml
+++ b/ui/storefront/Areas/Order/Views/Order/ConfirmOrder.cshtml
@@ -1,4 +1,4 @@
-﻿@model RookieShop.Storefront.Areas.Order.Models.OrderViewModel
+﻿@model RookieShop.Storefront.Areas.Order.Models.OrderViewModel?
 
 @{
     ViewBag.Title = "Order Confirmation";
@@ -8,33 +8,42 @@
 <section class="bg-white py-8 antialiased md:py-16">
     <div class="mx-auto max-w-2xl px-4 2xl:px-0">
         <h2 class="text-xl font-semibold text-gray-900 sm:text-2xl mb-2">Thanks for your order!</h2>
-        <p class="text-gray-500 mb-6 md:mb-8">
-            Your order
-            <span class="font-medium text-gray-900 hover:underline"># @Model.Id.ToString("D").Split('-').Last()</span>
-            will be processed within 24 hours during working days. We will notify you by email once your order has been shipped.
-        </p>
-        <div class="space-y-4 sm:space-y-2 rounded-lg border border-gray-100 bg-gray-50 p-6 mb-6 md:mb-8">
-            <dl class="sm:flex items-center justify-between gap-4">
-                <dt class="font-normal mb-1 sm:mb-0 text-gray-500 ">Date</dt>
-                <dd class="font-medium text-gray-900 sm:text-end">
-                    @DateTime.UtcNow.ToString("MMMM dd, yyyy")
-                </dd>
-            </dl>
-            <dl class="sm:flex items-center justify-between gap-4">
-                <dt class="font-normal mb-1 sm:mb-0 text-gray-500 d">Payment Method</dt>
-                <dd class="font-medium text-gray-900 sm:text-end">@Model.PaymentMethod</dd>
-            </dl>
-            <dl class="sm:flex items-center justify-between gap-4">
-                <dt class="font-normal mb-1 sm:mb-0 text-gray-500">Status</dt>
-                <dd class="font-medium text-gray-900 sm:text-end">@Model.Status</dd>
-            </dl>
-            <dl class="sm:flex items-center justify-between gap-4">
-                <dt class="font-normal mb-1 sm:mb-0 text-gray-500">Address</dt>
-                <dd class="font-medium text-gray-900 sm:text-end">
-                    @string.Concat(Model.Street, ", ", Model.City, ", ", Model.Province)
-                </dd>
-            </dl>
-        </div>
+        @if (Model is not null)
+        {
+            <p class="text-gray-500 mb-6 md:mb-8">
+                Your order
+                <span class="font-medium text-gray-900 hover:underline"># @Model.Id.ToString("D").Split('-').Last()</span>
+                will be processed within 24 hours during working days. We will notify you by email once your order has been shipped.
+            </p>
+            <div class="space-y-4 sm:space-y-2 rounded-lg border border-gray-100 bg-gray-50 p-6 mb-6 md:mb-8">
+                <dl class="sm:flex items-center justify-between gap-4">
+                    <dt class="font-normal mb-1 sm:mb-0 text-gray-500 ">Date</dt>
+                    <dd class="font-medium text-gray-900 sm:text-end">
+                        @DateTime.UtcNow.ToString("MMMM dd, yyyy")
+                    </dd>
+                </dl>
+                <dl class="sm:flex items-center justify-between gap-4">
+                    <dt class="font-normal mb-1 sm:mb-0 text-gray-500 d">Payment Method</dt>
+                    <dd class="font-medium text-gray-900 sm:text-end">@Model.PaymentMethod</dd>
+                </dl>
+                <dl class="sm:flex items-center justify-between gap-4">
+                    <dt class="font-normal mb-1 sm:mb-0 text-gray-500">Status</dt>
+                    <dd class="font-medium text-gray-900 sm:text-end">@Model.Status</dd>
+                </dl>
+                <dl class="sm:flex items-center justify-between gap-4">
+                    <dt class="font-normal mb-1 sm:mb-0 text-gray-500">Address</dt>
+                    <dd class="font-medium text-gray-900 sm:text-end">
+                        @string.Concat(Model.Street, ", ", Model.City, ", ", Model.Province)
+                    </dd>
+                </dl>
+            </div>
+        }
+        else
+        {
+            <p class="text-gray-500 mb-6 md:mb-8">
+                Your order has been processed successfully. We will notify you by email once your order has been shipped.
+            </p>
+        }
         <div class="flex items-center space-x-4">
             <a asp-area="Product" asp-controller="Product" asp-action="Index" class="py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-100">Return to shopping</a>
         </div>
