--- a/src/RookieShop.StoreFront/Views/Shared/_Layout.cshtml
+++ b/src/RookieShop.StoreFront/Views/Shared/_Layout.cshtml
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="~/"/>
+    <component type="typeof(Microsoft.AspNetCore.Components.Web.HeadOutlet)"
+               render-mode="ServerPrerendered"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <partial name="Partials/_DefaultMetaTagsPartital"/>
@@ -69,19 +72,19 @@
                                hx-target="#head"
                                hx-trigger="confirmed"
                                onClick="Swal.fire({
-                                            title: 'Are you sure?' ,
-                                            text: 'You will be logged out.' ,
-                                            icon: 'warning',
-                                            showCancelButton: true,
-                                            confirmButtonColor: '#3085d6',
-                                            cancelButtonColor: '#d33' ,
-                                            confirmButtonText: 'Yes, log out!'
-                                        }).then((result)=>{
-                                            if(result.isConfirmed){
-                                                htmx.trigger(this, 'confirmed');
-                                                toastr.success('You have been logged out');
-                                            } 
-                                        })"
+                                                title: 'Are you sure?' ,
+                                                text: 'You will be logged out.' ,
+                                                icon: 'warning',
+                                                showCancelButton: true,
+                                                confirmButtonColor: '#3085d6',
+                                                cancelButtonColor: '#d33' ,
+                                                confirmButtonText: 'Yes, log out!'
+                                            }).then((result)=>{
+                                                if(result.isConfirmed){
+                                                    htmx.trigger(this, 'confirmed');
+                                                    toastr.success('You have been logged out');
+                                                } 
+                                            })"
                                class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center cursor-pointer">
                                 Log Out
                             </a>
@@ -145,7 +148,7 @@
                 asp-append-version="true"
                 integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
                 crossorigin="anonymous">
-        </script>
+            </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.11.0/sweetalert2.min.js"
                 asp-fallback-src="~/lib/dist/sweetalert2/sweetalert2.min.js"
                 asp-fallback-test="window.Swal"
@@ -153,7 +156,7 @@
                 integrity="sha512-Wi5Ms24b10EBwWI9JxF03xaAXdwg9nF51qFUDND/Vhibyqbelri3QqLL+cXCgNYGEgokr+GA2zaoYaypaSDHLg=="
                 crossorigin="anonymous"
                 referrerpolicy="no-referrer">
-        </script>
+            </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"
                 asp-fallback-src="~/lib/dist/toastr.js/toastr.min.js"
                 asp-fallback-test="window.toastr"
@@ -161,14 +164,14 @@
                 integrity="sha512-lbwH47l/tPXJYG9AcFNoJaTMhGvYWhVM9YI43CT+uteTRRaiLCui8snIgyAN8XWgNjNhCqlAUdzZptso6OCoFQ=="
                 crossorigin="anonymous"
                 referrerpolicy="no-referrer">
-        </script>
+            </script>
         <script src="https://unpkg.com/htmx.org@1.9.12"
                 asp-fallback-src="~/lib/dist/htmx/htmx.min.js"
                 asp-fallback-test="window.htmx"
                 asp-append-version="true"
                 integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
                 crossorigin="anonymous">
-        </script>
+            </script>
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.0/dist/cdn.min.js"
                 asp-fallback-src="~/lib/dist/alpinejs/cdn.min.js"
                 asp-fallback-test="window.Alpine"
@@ -178,8 +181,7 @@
                 asp-append-version="true"></script>
     </environment>
 </cache>
-
 @await RenderSectionAsync("Scripts", false)
-
+<script src="~/_framework/blazor.server.js"></script>
 </body>
 </html>
