--- a/src/RookieShop.StoreFront/Components/Chatbot/ShowChatbotButton.razor
+++ b/src/RookieShop.StoreFront/Components/Chatbot/ShowChatbotButton.razor
@@ -1,5 +1,8 @@
 ﻿<div class="fixed bottom-0 right-0 mb-4 mr-4">
     <button id="open-chat" class="text-white bg-blue-700 hover:bg-blue-800 rounded-lg focus:ring-4 py-2 px-4 transition duration-300 flex items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+        </svg>
         Chat with Bot
     </button>
 </div>
