--- a/src/RookieShop.StoreFront/Views/Shared/_Layout.cshtml
+++ b/src/RookieShop.StoreFront/Views/Shared/_Layout.cshtml
@@ -7,123 +7,16 @@
                render-mode="ServerPrerendered"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <partial name="Partials/_DefaultMetaTagsPartital"/>
+    <partial name="Partials/Layout/_AppleIconPartial"/>
+    <partial name="Partials/Layout/_DefaultMetaTagsPartital"/>
     @await RenderSectionAsync("MetaTags", false)
     <title>@ViewData["Title"]</title>
     <link rel="author" href="https://github.com/foxminchan"/>
-    <cache expires-after="@TimeSpan.FromSeconds(300)">
-        <partial name="Partials/_AppleIconPartial"/>
-        <environment names="Development,Docker">
-            <link rel="stylesheet" href="~/css/output.css" asp-append-version="true"/>
-            <link rel="stylesheet" href="~/lib/dist/toastr.js/toastr.min.css" asp-append-version="true"/>
-            <link rel="stylesheet" href="~/lib/dist/sweetalert2/sweetalert2.css" asp-append-version="true"/>
-            <link rel="stylesheet" href="~/lib/dist/font-awesome/css/fontawesome.min.css" asp-append-version="true"/>
-        </environment>
-        <environment names="Staging,Production">
-            <link rel="stylesheet" href="https://cdn.tailwindcss.com" asp-append-version="true"/>
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-                  asp-fallback-href="~/lib/dist/font-awesome/css/fontawesome.min.css"
-                  asp-append-version="true"
-                  rel="stylesheet"
-                  integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-                  crossorigin="anonymous"
-                  referrerpolicy="no-referrer"/>
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.11.0/sweetalert2.min.css"
-                  asp-fallback-href="~/lib/dist/sweetalert2/sweetalert2.min.css"
-                  asp-append-version="true"
-                  rel="stylesheet"
-                  integrity="sha512-OWGg8FcHstyYFwtjfkiCoYHW2hG3PDWwdtczPAPUcETobBJOVCouKig8rqED0NMLcT9GtE4jw6IT1CSrwY87uw=="
-                  crossorigin="anonymous"
-                  referrerpolicy="no-referrer"/>
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css"
-                  asp-fallback-href="~/lib/dist/toastr.js/toastr.min.css"
-                  asp-append-version="true"
-                  rel="stylesheet"
-                  integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA=="
-                  crossorigin="anonymous"
-                  referrerpolicy="no-referrer"/>
-        </environment>
-    </cache>
+    <partial name="Partials/Layout/_StyleSheets"/>
 </head>
 <body class="flex flex-col min-h-screen pt-24">
-<header id="head" class="shadow-sm">
-    <nav class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200">
-        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a asp-area="" asp-controller="Home" asp-action="Index" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img loading="lazy" src="~/imgs/logo.png" class="h-8" alt="Rookie Shop" asp-append-version="true"/>
-                <span class="self-center text-2xl font-semibold whitespace-nowrap">Rookie Shop</span>
-            </a>
-            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-                @if (User.Identity!.IsAuthenticated)
-                {
-                    <ul class="list-none flex space-x-4 items-center">
-                        <li>
-                            <a asp-area="User" asp-controller="Account" asp-action="Index" class="flex items-center space-x-2 justify-center py-4 pr-2">
-                                <img loading="lazy" src="~/imgs/home/account.svg" class="h-6 w-6" alt="Account" asp-append-version="true"/>
-                            </a>
-                        </li>
-                        @await Component.InvokeAsync("BasketButton")
-                        <li>
-                            <a hx-post
-                               hx-area="User"
-                               hx-controller="Account"
-                               hx-action="Logout"
-                               hx-vals="@null"
-                               hx-swap="outerHTML"
-                               hx-target="#head"
-                               hx-trigger="confirmed"
-                               onClick="Swal.fire({
-                                                title: 'Are you sure?' ,
-                                                text: 'You will be logged out.' ,
-                                                icon: 'warning',
-                                                showCancelButton: true,
-                                                confirmButtonColor: '#3085d6',
-                                                cancelButtonColor: '#d33' ,
-                                                confirmButtonText: 'Yes, log out!'
-                                            }).then((result)=>{
-                                                if(result.isConfirmed){
-                                                    htmx.trigger(this, 'confirmed');
-                                                    toastr.success('You have been logged out');
-                                                } 
-                                            })"
-                               class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center cursor-pointer">
-                                Log Out
-                            </a>
-                        </li>
-                    </ul>
-                }
-                else
-                {
-                    <a asp-area="User" asp-controller="Account" asp-action="Login" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Sign in</a>
-                }
-                <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-sticky" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-                    <img loading="lazy" class="w-5 h-5" src="~/imgs/toggle.svg" alt="Toggle" asp-append-version="true"/>
-                </button>
-            </div>
-            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-                <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
-                    <li>
-                        <a asp-area="" asp-controller="Home" asp-action="Index" class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Home") ? "text-blue-700" : "text-gray-900")" aria-current="page">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-area="Product" asp-controller="Product" asp-action="Index" asp-route-page="1" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Product") ? "text-blue-700" : "text-gray-900")">
-                            Products
-                        </a>
-                    </li>
-                    @await Component.InvokeAsync("CategoryDropDown")
-                    <li>
-                        <a asp-area="" asp-controller="About" asp-action="Index" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("About") ? "text-blue-700" : "text-gray-900")">
-                            About
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
+
+<partial name="Partials/Layout/_Header"/>
 
 <div class="flex-1">
     <partial name="_CookieConsentPartial"/>
@@ -131,57 +24,11 @@
         @RenderBody()
     </main>
 </div>
+
 <component type="typeof(ShowChatbotButton)" render-mode="ServerPrerendered"/>
-<cache expires-after="@TimeSpan.FromSeconds(300)">
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <environment names="Development,Docker">
-        <script src="~/lib/dist/jquery/jquery.min.js" asp-append-version="true"></script>
-        <script src="~/lib/dist/sweetalert2/sweetalert2.min.js" asp-append-version="true"></script>
-        <script src="~/lib/dist/toastr.js/toastr.min.js" asp-append-version="true"></script>
-        <script src="~/lib/dist/htmx/htmx.min.js" asp-append-version="true"></script>
-        <script src="~/lib/dist/alpinejs/cdn.min.js" asp-append-version="true"></script>
-        <script src="~/lib/dist/hyperscript.org/_hyperscript.min.js" asp-append-version="true"></script>
-    </environment>
-    <environment names="Staging,Production">
-        <script src="https://code.jquery.com/jquery-4.0.0-beta.slim.min.js"
-                asp-fallback-src="~/lib/dist/jquery/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                asp-append-version="true"
-                integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
-                crossorigin="anonymous">
-            </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.11.0/sweetalert2.min.js"
-                asp-fallback-src="~/lib/dist/sweetalert2/sweetalert2.min.js"
-                asp-fallback-test="window.Swal"
-                asp-append-version="true"
-                integrity="sha512-Wi5Ms24b10EBwWI9JxF03xaAXdwg9nF51qFUDND/Vhibyqbelri3QqLL+cXCgNYGEgokr+GA2zaoYaypaSDHLg=="
-                crossorigin="anonymous"
-                referrerpolicy="no-referrer">
-            </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"
-                asp-fallback-src="~/lib/dist/toastr.js/toastr.min.js"
-                asp-fallback-test="window.toastr"
-                asp-append-version="true"
-                integrity="sha512-lbwH47l/tPXJYG9AcFNoJaTMhGvYWhVM9YI43CT+uteTRRaiLCui8snIgyAN8XWgNjNhCqlAUdzZptso6OCoFQ=="
-                crossorigin="anonymous"
-                referrerpolicy="no-referrer">
-            </script>
-        <script src="https://unpkg.com/htmx.org@1.9.12"
-                asp-fallback-src="~/lib/dist/htmx/htmx.min.js"
-                asp-fallback-test="window.htmx"
-                asp-append-version="true"
-                integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
-                crossorigin="anonymous">
-            </script>
-        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.0/dist/cdn.min.js"
-                asp-fallback-src="~/lib/dist/alpinejs/cdn.min.js"
-                asp-fallback-test="window.Alpine"
-                asp-append-version="true"></script>
-        <script src="https://unpkg.com/hyperscript.org@0.9.12"
-                asp-fallback-src="~/lib/dist/hyperscript.org/_hyperscript.min.js"
-                asp-append-version="true"></script>
-    </environment>
-</cache>
+
+<partial name="Partials/Layout/_Scripts"/>
+
 @await RenderSectionAsync("Scripts", false)
 <script src="~/_framework/blazor.server.js"></script>
 </body>
