--- a/src/RookieShop.StoreFront/Areas/Product/Views/Product/Index.cshtml
+++ b/src/RookieShop.StoreFront/Areas/Product/Views/Product/Index.cshtml
@@ -26,7 +26,11 @@ else
                 {
                     <div class="group relative">
                         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75">
-                            <img asp-append-version="true" loading="lazy" src="@(product.ImageUrl ?? "~/imgs/product/default-preview-image.png")" alt="@product.Name" class="h-full w-full lg:h-full lg:w-full object-cover object-center">
+                            <img asp-append-version="true" 
+                                 loading="lazy" 
+                                 src="@(product.ImageUrl ?? "~/imgs/product/default-preview-image.png")" 
+                                 alt="@product.Name" 
+                                 class="h-full w-full lg:h-full lg:w-full object-cover object-center lg:object-cover lg:object-center" />
                         </div>
                         <div class="mt-4 flex justify-between">
                             <div>
